Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7753 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -622,8 +622,8 @@ Stamina.abbr=КО
 Form=Форма
 Form.abbr=ФО
 
-Loyality=Лојалност
-Loyality.abbr=Ло
+Loyality=Оданост
+Loyality.abbr=ОД
 MotherClubBonus=Клупски бонус
 MotherClubBonus.abbr=КБ
 
