Serbian Translation update (typos)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7754 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -535,7 +535,7 @@ Scoring.abbr=НА
 Passing=Додавање
 Passing.abbr=ДО
 Defending=Одбрана
-Defending.abbr=ОД
+Defending.abbr=ОДБ
 Keeper=На голу
 Keeper.abbr=ГО
 Set_pieces=Прекиди
@@ -623,7 +623,7 @@ Form=Форма
 Form.abbr=ФО
 
 Loyality=Оданост
-Loyality.abbr=ОД
+Loyality.abbr=ОДА
 MotherClubBonus=Клупски бонус
 MotherClubBonus.abbr=КБ
 
