Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7776 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -401,6 +401,8 @@ foxtrick.TeamStats.Pictures.label=Слике
 foxtrick.TeamStats.PlayedLatest.label=Играли последњи меч
 foxtrick.TeamStats.NotPlayedLatest.label=Нису играли последњи меч
 foxtrick.TeamStats.ActivePlayers.label=Активни играчи
+foxtrick.TeamStats.HomeGrownPlayers.label=Поникли у клубу
+foxtrick.TeamStats.PurchasedPlayers.label=Купљени играчи
 
 #season stats
 #note to translators. use abreviations of league table where applicable
