Removed byte-order-mark from those file. Not needed for UTF-8 anyway.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7783 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# LUXEMBOURGISH language file
+# LUXEMBOURGISH language file
 # utf-8 encoded lb-LU locale
 # By Mod-Karlthegreat (TeamID: 463282) / checked till r2325
 
