--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# Polish language file @r5295
+# Polish language file @r5295
 # utf-8 encoded pl-PL
 # Edited by Homzik [teamid=79468] & SilesiaVratislavia [teamid=1816889]
 
