--- a/content/locale/ru/foxtrick.properties
+++ b/content/locale/ru/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿# ru-RU (Russian language file)
+# ru-RU (Russian language file)
 # based on MASTER language file r7743
 # by _KOHb_ [teamId=28914]
 
