--- a/content/locale/uk/foxtrick.properties
+++ b/content/locale/uk/foxtrick.properties
@@ -1,4 +1,4 @@
-﻿?#UKRAINIAN language file (based on MLF rev. 2619)
+#UKRAINIAN language file (based on MLF rev. 2619)
 # utf-8 encoded uk-UA
 # Edited by Grif_07 [teamid=527635]
 
