Minor fixed, mostly comments without actually beeing comments
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7784 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -847,7 +847,7 @@ tab.help=Pomoć
 
 
 
-ex color editor
+#ex color editor
 foxtrick.prefs.PrefDefaultWarningLabel=Bitno upozorenje za Foxtrik podešavanja
 foxtrick.prefs.PrefDefaultWarningText=Provjerite jeste li dobro podesili valutu i jezik koji koristite na Hattricku! Pojedine funkcije Foxtricka neće raditi ako ovo niste podesili pravilno.
 foxtrick.prefs.basicPreferences=Osnovne postavke
