--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -331,7 +331,7 @@ foxtrick.ForumStripHattrickLinks.desc=Treu el nom del servidor dels enllaços in
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=No mostris la finestra de confirmació abans de tallar els enllaços
 foxtrick.LeagueAndMatchChat.desc=Afegeix un enllaç pel xat extern a la pàgina de la copa de la lliga i a les pàgines de federacions, també a les lligues, lligues de juvenils i partits, tant del primer equip com del planter (si no hi ha benvinguda és que el servidor està caigut).
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Obre el xat Yapley en una nova finestra
-Obre el xat Yapley a la pàgina de Hattrick
+#Obre el xat Yapley a la pàgina de Hattrick
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Obre el xat Gabbly en una nova finestra
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Seleccioneu el vostre àlies pel xat
 foxtrick.RapidId.desc=Una caixa d'entrada a dalt de la pàgina útil per veure un equip, jugador, etc… per la seva Id
