--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -916,7 +916,7 @@ tab.help=Apua
 
 
 
-eksaväri-muokkaaja
+#eksaväri-muokkaaja
 foxtrick.prefs.PrefDefaultWarningLabel=Esiasetusten varoitus
 foxtrick.prefs.PrefDefaultWarningText=Tarkistithan kieli ja valuutta -asetukset? Jotkin Foxtrickin ominaisuuksista ei toimi, jos kyseisiä asetuksia ei olla asetettu täsmällisesti.
 foxtrick.prefs.basicPreferences=Perusasetukset
