--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -347,7 +347,7 @@ foxtrick.ForumStripHattrickLinks.desc=Ukloniti broj servera za postanje internih
 foxtrick.ForumStripHattrickLinks.NoConfirmStripping.desc=Isključiti potvrdu kod postanja internih linkova bez broja servera
 foxtrick.LeagueAndMatchChat.desc=Dodati link na eksterni chat na stranicama nacionalnog kupa i federacije, kao i na stranicama lige i juniorske lige, te seniorskih i juniorskih utakmica (ako nema pozdravne poruke, to znači da je server za chat trenutno nedostupan)
 foxtrick.LeagueAndMatchChat.OpenYapletPopup.desc=Otvoriti chat opciju u dodatnom prozorčiću
-Otvoriti chat opciju kao okvir unutar Hattrickove stranice
+#Otvoriti chat opciju kao okvir unutar Hattrickove stranice
 foxtrick.LeagueAndMatchChat.OpenGabblyPopup.desc=Otvoriti chat opciju u novom prozoru
 foxtrick.LeagueAndMatchChat.ChatNick.desc=Izaberite vaš chat-nadimak
 foxtrick.RapidId.desc=Priručni okvir na vrhu stranice za brzi pronalazak momčadi, igrača, itd. preko ID broja
