--- a/content/locale/mk/foxtrick.properties
+++ b/content/locale/mk/foxtrick.properties
@@ -75,7 +75,7 @@ foxtrick.LinksYouthTraining.desc=Adds some external links to the youthtrainig pa
 foxtrick.LinksYouthPlayerDetail.desc=Adds some external links to the youthplayer details page
 foxtrick.LinksArena.desc=Додава неколку надворешни линкови на страницата од стадионот
 foxtrick.LinksCoach.desc=Додава неколку надворешни линкови на страницата за нов тренер
-foxtrick.LinksPlayerDetail.descДодава неколку надворешни линкови на страницата со деталите за играчите
+foxtrick.LinksPlayerDetail.desc=Додава неколку надворешни линкови на страницата со деталите за играчите
 foxtrick.LinksMatch.desc=Додава неколку надворешни линкови на страницата од натпреварот
 foxtrick.LinksTraining.desc=Додава неколку надворешни линкови на страницата од тренингот
 foxtrick.LinksAlliances.desc=Додава неколку надворешни линкови на страницата од федерацијата
