--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -836,7 +836,7 @@ tab.help=Pomoc
 
 
 
-exowy edytor kolorów
+#exowy edytor kolorów
 foxtrick.prefs.PrefDefaultWarningLabel=Preset default warning
 foxtrick.prefs.PrefDefaultWarningText=Sprawdź ustawienia języka oraz waluty. Niektóre funkcje Foxtricka nie będą działać poprawnie jeśli wcześniej wspomniane opcje nie będą ustawione poprawnie.
 foxtrick.prefs.basicPreferences=Podstawowe ustawienia
