--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -636,7 +636,7 @@ tab.help=Ndihmë
 
 
 
-ink te editori i ngjyrave
+#ink te editori i ngjyrave
 foxtrick.prefs.PrefDefaultWarningLabel=Paralajmërimi për kthim në standarte
 foxtrick.prefs.PrefDefaultWarningText=Ju lutemi kontrolloni zgjedhjet për gjuhën dhe monedhën. Disa opcione të FoxTrick nuk do punojnë nëse këto nuk janë zgjedhur si duhet.
 foxtrick.prefs.setup.locale=Zgjedhja e gjuhës
