I figured i should run a less aggressive algorithm. Casing and spaces on the left side of the equal symbol was now ignored. This way i saved 19 translations. ~ 4150 useless ones are gone anyway.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7787 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/bs/foxtrick.properties
+++ b/content/locale/bs/foxtrick.properties
@@ -235,7 +235,7 @@ foxtrick.CopyMatchID.desc=Kopira ID meča kad se klikne na ikonicu liga/kup/prij
 foxtrick.HeaderFix.desc=Fiksira zaglavlje i horizontalni meni dok se ostatak stranice može skrolati.
 foxtrick.HeaderFix.FixLeft.desc=Fiksira i vertikalni podmeni pri skrolanju
 foxtrick.CopyRatings.desc=Dodaje linkove na tabelu s ocjenama na stranici izvještaja s utakmice za kopiranje ocjena (u HT-ML)
-
+foxtrick.GoaldifferenceToTables.desc=Ubacuje dodatnu kolonu za gol razliku u tabeli za promociju i starim ligaškim tabelama
 foxtrick.CrossTable.desc=Ubacuje dodatnu tabelu s rezultatima na stranicu 'Raspored utakmica' u svakoj ligi, kao i grafik plasmana u ligi.
 foxtrick.ElectionTable.desc=Dodaje procente i ukupan broj glasača za 30 prvoplasiranih kandidata na stranici za izbore.
 foxtrick.ContextMenuCopy.desc=Opcije kontekst menija za kopiranje ID-ova i/ili linkova i sadržaja u HT-ML
@@ -803,7 +803,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT federacijski chat
 
 #htms
 HTMSPrediction.prediction=Pretpostavljeni rezultat
-
+HTMSPrediction.windrawloss=pobjeda/neriješeno/poraz
 HTMSPrediction.title=Analiza utakmice prema HTMS
 HTMSPrediction.changePrediction=Promijeni pretpostavku
 
