--- a/content/locale/ca/foxtrick.properties
+++ b/content/locale/ca/foxtrick.properties
@@ -238,7 +238,7 @@ foxtrick.CopyMatchID.desc=Copia la Id del partit al fer clic en la icona de llig
 foxtrick.HeaderFix.desc=Arregla la capçalera al desplaçar «scrolling» (afectarà a altres pàgines i no només a HT)
 foxtrick.HeaderFix.FixLeft.desc=També soluciona el problema del sub-menú quan es mou la barra de desplaçament
 foxtrick.CopyRatings.desc=Afegeix enllaços a la taula de ratis dels partits per poder copiar-los (HT-ML)
-
+foxtrick.GoaldifferenceToTables.desc=Afegeix una nova columna amb la diferència de gols a la taula de promoció i a la d'història del grup
 foxtrick.CrossTable.desc=Afegeix una nova taula pels encreuaments, on tots els partits de lliga es mostren incloent una gràfica lineal de la posició a la lliga
 foxtrick.ElectionTable.desc=Afegeix el percentatge a la taula de les eleccions (només els vots mostrats es compten, no tots)
 foxtrick.ContextMenuCopy.desc=Opcions del menú contextual per copiar ID i/o enllaç al contingut en HT-ML
@@ -805,7 +805,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Xat extern de la federació
 
 #htms
 HTMSPrediction.prediction=Resultat predit
-
+HTMSPrediction.windrawloss=guanyat/empatat/perdut
 HTMSPrediction.title=Anàlisis de partit de HTMS
 HTMSPrediction.changePrediction=Canvia la predicció
 
