--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -137,9 +137,9 @@ foxtrick.PlayerBirthday.desc=Shows last and incoming birthdays in players overvi
 
 
 #Shortcuts on right top
-
-
-
+foxtrick.ExtraShortcuts.AddLeft.desc = Check to add icon left, uncheck to add them right
+foxtrick.ExtraShortcuts.Supporterstats.desc = Linkicon to supporter stats
+foxtrick.ExtraShortcuts.Transfers.desc = Linkicon to transfers page of the own team
 
 #economyDifference
 #strings are shown as additional information on table headder on finances page ans also on pref. dialog radio option!
