--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -224,7 +224,7 @@ foxtrick.CopyMatchID.desc=Kopiert die MatchID in die Zwischenablage beim Klick a
 foxtrick.HeaderFix.desc=Fixiert beim Scrollen den Kopfbereich und das linke Menü (betrifft auch andere HT-Seiten)
 foxtrick.HeaderFix.FixLeft.desc=Beim Scrollen ebenfalls das linke Menü fixieren
 foxtrick.CopyRatings.desc=Fügt unter 'Aktionen' einen Button zum Kopieren der Ratings eines Matches hinzu (HT-table style für das Forum)
-
+foxtrick.GoaldifferenceToTables.desc=Anzeige einer extra Spalte für die Tordifferenz in Tabellen
 foxtrick.CrossTable.desc=Anzeige einer Tabelle des Quervergleichs aller Teams
 foxtrick.ElectionTable.desc=Anzeige von Prozentzahlen in der Tabelle der Wahlergebnisse
 foxtrick.ContextMenuCopy.desc=Hinzufügen der Option zum Kopieren von TeamID, UserID...
@@ -271,11 +271,11 @@ foxtrick.TeamPopupLinks.YouthMatches.desc=Link zu den Jugendspielen
 foxtrick.TeamPopupLinks.Coach.desc=Link zum Trainer
 foxtrick.TeamPopupLinks.CustomLink.desc=Eigene Links. Die Tags [userid] und [teamid] werden automatisch durch die IDs ersetzt
 foxtrick.SkillColoring.desc=Skills farblich hervor heben bzw. mit Zahlenwert darstellen
-
+foxtrick.SkillColoring.skill_color.desc = Skills farblich hervor heben
 foxtrick.SkillColoring.only_skill_color.desc=Nur Skills einfärben, nicht die Fanstimmung oder die Spielerpersönlichkeiten.
-
+foxtrick.SkillColoring.skill_number.desc = Skills auch als Zahlen darstellen z.B. gut (7)
 foxtrick.SkillColoring.skill_number_translated.desc=Anzeige der Skills auch in Englisch sowie als Zahl z.B. gut (solid 7)
-
+foxtrick.SkillColoring.skill_select.desc = Skills auch in der Transfersuche als Zahlen darstellen z.B. gut (7)
 foxtrick.SkillColoring.no_skill_links.desc=Entfernt den Linkstyle von Skills
 foxtrick.BackgroundFixed.desc=Statisches Hintergrundbild
 foxtrick.MatchIncome.desc=Zeigt Zuschauereinnahmen unter der Zuschauerverteilung an
@@ -845,7 +845,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non HT Föderationchat
 
 #htms
 HTMSPrediction.prediction=Ergebnisvorhersage
-
+HTMSPrediction.windrawloss=Sieg/Unentschieden/Niederlage
 HTMSPrediction.title=Spielanalyse durch HTMS
 HTMSPrediction.changePrediction=Vorhersage ändern
 
