--- a/content/locale/es_ca/foxtrick.properties
+++ b/content/locale/es_ca/foxtrick.properties
@@ -221,7 +221,7 @@ foxtrick.CopyMatchID.desc=Copia el ID del partido al dar clic en el icono de lig
 foxtrick.HeaderFix.desc=Mantiene fijo el encabezado mientras se navega (afecta otras páginas de HT)
 foxtrick.HeaderFix.FixLeft.desc=También arregla el submenú mientras se desplaza la página
 foxtrick.CopyRatings.desc=Añade enlaces dentro del reporte del partido para copiar las calificaciones (en HT-ML)
-
+foxtrick.GoaldifferenceToTables.desc=Añade una columna con diferencia de goles, dentro de la tabla de promoción, al igual que en las tablas de liga pasadas.
 foxtrick.CrossTable.desc=Añade una tabla extra al Calendario de Partidos, donde se presentan todos los resultados de los partidos de la liga, incluyendo una gráfica con las posiciones de la liga
 foxtrick.ElectionTable.desc=Añade porcentajes a la tabla de elecciones (solo se cuentan los votos mostrados, no todos)
 foxtrick.ContextMenuCopy.desc=Añade opciones dentro del menú contextual para copiar ID y/o enlace y contenido en HT-ML
