--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -229,7 +229,7 @@ foxtrick.CopyMatchID.desc=Copie l'identifiant du match dans le presse-papiers en
 foxtrick.HeaderFix.desc=Fige l'entête l'entête de la page pendant le défilement (concerne aussi d'autres pages de HT).
 foxtrick.HeaderFix.FixLeft.desc=Le menu subordonné est également figé lors du défilement
 foxtrick.CopyRatings.desc=Ajoute un bouton dans la zone Actions des compte-rendus des matchs pour copier les performances détaillés dans le presse-papiers (Format HT-table utilisable dans les forums)
-
+foxtrick.GoaldifferenceToTables.desc=Ajoute une colonne supplémentaire pour la différence de buts aux pages 'Statut de promotion' et 'Classements historiques'.
 foxtrick.CrossTable.desc=Ajoute une représentation graphique du classement ainsi qu'un tableau croisé des résultats de la division à la page 'Calendrier des matchs'.
 foxtrick.ElectionTable.desc=Ajoute les pourcentages à la table des élections.
 foxtrick.ContextMenuCopy.desc=Ajoute une option dans le menu contextuel pour copier les identifiants (Id d'équipe, d'utilisateur, etc...)
