--- a/content/locale/gl/foxtrick.properties
+++ b/content/locale/gl/foxtrick.properties
@@ -136,9 +136,9 @@ foxtrick.PlayerBirthday.desc=Amosa o último e o próximo aniversario do xogador
 
 
 #Shortcuts on right top
-
-
-
+foxtrick.ExtraShortcuts.AddLeft.desc = Selecciona para engadir as iconas á esquerda, deselecciona para engadilas á dereita
+foxtrick.ExtraShortcuts.Supporterstats.desc = Icona de ligazón as estatísticas de supporter
+foxtrick.ExtraShortcuts.Transfers.desc = Icona de ligazón á páxina de transferencias do equipo propio
 
 #economyDifference
 #strings are shown as additional information on table headder on finances page ans also on pref. dialog radio option!
