--- a/content/locale/hr/foxtrick.properties
+++ b/content/locale/hr/foxtrick.properties
@@ -233,7 +233,7 @@ foxtrick.CopyMatchID.desc=Omogućiti automatsko kopiranje ID broja utakmice klik
 foxtrick.HeaderFix.desc=Fiksirati glavno zaglavlje HT-a prilikom 'skrolanja' mišem
 foxtrick.HeaderFix.FixLeft.desc=Fiksirati također i podizbornik prilikom 'skrolanja' mišem
 foxtrick.CopyRatings.desc=Dodati link na stranici izvješća s utakmice u svrhu kopiranja ocjena u međuspremnik (u HT-ML formatu)
-
+foxtrick.GoaldifferenceToTables.desc=Dodati posebni redak za prikaz gol razlike na stranici s promocijama i na starim ligaškim tablicama
 foxtrick.CrossTable.desc=Dodati dodatnu tablicu u 'Raspored utakmica' u kojoj su prikazani svi rezultati uključujući i grafikon prikaza pozicije u ligi
 foxtrick.ElectionTable.desc=Dodati postotke u tablicu s izborima (računaju se samo prikazani glasovi)
 foxtrick.ContextMenuCopy.desc=Dodati opciju kopiranja raznih ID brojeva u kontekstni izbornik (teamID,userID...)
@@ -817,7 +817,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Ne-HT Federacijski Chat
 
 #htms
 HTMSPrediction.prediction=Predviđeni rezultat
-
+HTMSPrediction.windrawloss=pobjeda/neriješeno/poraz
 HTMSPrediction.title=HTMS analiza utakmice
 HTMSPrediction.changePrediction=Izmijeniti predviđanje
 
