--- a/content/locale/lb/foxtrick.properties
+++ b/content/locale/lb/foxtrick.properties
@@ -168,7 +168,7 @@ foxtrick.CopyMatchID.desc=Op der Säit fir d'Mätscher oder am Archiv vun de Mä
 foxtrick.HeaderFix.desc=Déi iewescht Läischt bleift stoen, wa gescrollt gëtt (betrëfft och aner HT-Säiten).
 foxtrick.HeaderFix.FixLeft.desc=De Submenü gëtt beim Scrollen och gefléckt.
 foxtrick.CopyRatings.desc=Ënner 'Aktiounen' kënnt an de Rapporte vun de Mätscher e Knäppchen dobäi, mat een d'Bewäertunge kann an d'Tëschepalette kopéieren (am Stil vun HT-Tabellen fir an de Forum ze schreiwen).
-
+foxtrick.GoaldifferenceToTables.desc=Eng extra Rei fir d'Goaldifferenz gëtt an der Tabell fir den Opstig an an den ale Championatstabellen dobäigesat.
 foxtrick.CrossTable.desc=Eng zousätzlech Tabell beim Spillplan gëtt gewisen, op där all d'Resultater vun de Championatsmätscher gewise ginn, dozou och en Diagramm iwwer d'Évolutioun vun de Plazéierungen.
 foxtrick.ElectionTable.desc=Beim Walresultat gi Prozentzuelen dobäigesat (nëmme Stëmmen, déi gewise ginn, gi gezielt).
 foxtrick.ContextMenuCopy.desc=Am Kontext-Menü kënnt eng Optioun dobäi, fir IDen ze kopéieren (VeräinsID, BenotzerID...)
