--- a/content/locale/mt/foxtrick.properties
+++ b/content/locale/mt/foxtrick.properties
@@ -223,7 +223,7 @@ foxtrick.CopyMatchID.desc=Jikkopja l-id tal-partita meta tagħfas fuq logħba ta
 foxtrick.HeaderFix.desc=Iżomm il-parti ta' fuq fissa meta tkun qiegħed tisskrollja 'l isfel (taffettwa wkoll paġni oħra f'HT)
 foxtrick.HeaderFix.FixLeft.desc=Iżomm is-submenu fissa meta tkun qiegħed tisskrollja
 foxtrick.CopyRatings.desc=Iżid buttuna għal 'Azzjonijiet' fuq il-paġna bir-rapport tal-logħba biex inti tkun tista' tikkopja l-evalwazzjoni tal-partita għal fuq il-clipboard (f'HT-ML)
-
+foxtrick.GoaldifferenceToTables.desc=Iżid kolonna żejda għad-differenza ta' gowls fil-klassifika ta' timijiet li qegħdin jiġġieldu għall-promozzjoni u kif ukoll fil-klassifiċi tas-serje l-antiki
 foxtrick.CrossTable.desc=Iżid klassifika żejda għall-iskeda tal-logħob, fejn ir-riżultati tal-partiti kollha jiġu mniżżla u tiġi mpinġija graph kif qegħdin il-pożizzjonijiet fil-klassifika
 foxtrick.ElectionTable.desc=Iżid il-persentaġġ mat-tabella ta' l-elezzjonijiet (il-voti murija biss jiġu mgħoddija, u mhux il-voti kollha)
 foxtrick.ContextMenuCopy.desc=Iżid għażla mal-menu biex tkun tista' tikkopja l-ids (id tat-tim, id tal-persuna...)
@@ -813,7 +813,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Chat tal-federazzjoni (mhux-HT)
 
 #htms
 HTMSPrediction.prediction=Riżultat imbassar
-
+HTMSPrediction.windrawloss=rebħa/draw/telfa
 HTMSPrediction.title=Analiżi tal-partiti minn HTMS
 HTMSPrediction.changePrediction=Ibdel it-tbassir
 
