--- a/content/locale/nn/foxtrick.properties
+++ b/content/locale/nn/foxtrick.properties
@@ -249,7 +249,7 @@ foxtrick.CopyMatchID.desc=Kopierer kampID ved å klikke på liga-/cup-/vennskaps
 foxtrick.HeaderFix.desc=Ordnar overskrifta medan du scrollar (påverkar andre sider på HT og)
 foxtrick.HeaderFix.FixLeft.desc=Ordnar og undermenyen medan du scrollar
 foxtrick.CopyRatings.desc=Legg til lenkjer for å kopiera ratingar i kamprapporten (i HT-ML)
-
+foxtrick.GoaldifferenceToTables.desc=Legg til ei ekstra kolonne for målskilnad i opprykkstabellen samt ein gamal tabell
 foxtrick.CrossTable.desc=Legg til ein ekstra tabell til terminlista, der alle resultat i ligakampar vert presentert inkludert graf med ligaposisjon
 foxtrick.ElectionTable.desc=Legg prosent til valgtabellen (kun synte stemmer er teljande, ikkje alle)
 foxtrick.ContextMenuCopy.desc=Valg i menyen for å kopiere ID og/eller lenkjer og innhald i HT-ML
@@ -851,7 +851,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Non-HT Forbundschat
 
 #htms
 HTMSPrediction.prediction=Forventa resultat
-
+HTMSPrediction.windrawloss=siger/uavgjort/tap
 HTMSPrediction.title=Kampanalyse av HTMS
 HTMSPrediction.changePrediction=Endre spådom
 
