--- a/content/locale/pl/foxtrick.properties
+++ b/content/locale/pl/foxtrick.properties
@@ -235,7 +235,7 @@ foxtrick.CopyMatchID.desc=Kopiuje Match ID do schowka po kliknięciu na ikonę m
 foxtrick.HeaderFix.desc=Stale pokazuje nagłówek podczas przewijania strony (na każdej stronie Hattricka)
 foxtrick.HeaderFix.FixLeft.desc=Przykleja na stałe także menu po lewej
 foxtrick.CopyRatings.desc=Dodaje do komentarza meczowego funkcję kopiowania ocen meczowych do schowka (format HT-table dla forum)
-
+foxtrick.GoaldifferenceToTables.desc=Dodaje dodatkową kolumnę z różnicą bramek na stronie 'Awanse i spadki' oraz 'Stare tabele ligowe'
 foxtrick.CrossTable.desc=Dodaje dodatkową tabelę na stronie Kalendarz spotkań z wynikami wszystkich meczów oraz wykres pozycji ligowej
 foxtrick.ElectionTable.desc=Pokazuje poparcie w formie procentów (tylko wyświetlane głosy są liczone) na stronie Wybory
 foxtrick.ContextMenuCopy.desc=Dodaje do menu kontekstowego opcje kopiowania ID lub linków w formacie HT-ML
@@ -792,7 +792,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Zewnętrzny czat federacji
 
 #htms
 HTMSPrediction.prediction=Prognoza wyniku
-
+HTMSPrediction.windrawloss=wyg/remis/por
 HTMSPrediction.title=Analiza meczu HTMS
 HTMSPrediction.changePrediction=Zmień prognozę
 
