--- a/content/locale/pt_BR/foxtrick.properties
+++ b/content/locale/pt_BR/foxtrick.properties
@@ -136,7 +136,7 @@ foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/fr
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
 foxtrick.CopyRatings.desc=Adds a Button to 'Actions' on match report site, so you can copy the ratings to clipboard (HT-table style for forums)
-
+foxtrick.GoaldifferenceToTables.desc=Adds an extra column for goal difference on promotion table as well as on Old series tables
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented
 foxtrick.ElectionTable.desc=Adds percentage to election table
 foxtrick.ContextMenuCopy.desc=Add an option to the context menue to copy ids (teamid,userid...)
