--- a/content/locale/sk/foxtrick.properties
+++ b/content/locale/sk/foxtrick.properties
@@ -224,7 +224,7 @@ foxtrick.CopyMatchID.desc=Kopíruje ID zápasu pri kliknutí na ikonu typu zápa
 foxtrick.HeaderFix.desc=Opravuje hlavičku
 foxtrick.HeaderFix.FixLeft.desc=Tiež opravuje podmenu pri scrollovaní
 foxtrick.CopyRatings.desc=Pridáva gombík do 'Akcie' na stránke s výpisom so zápasu, tak si môžeš skopírovať ratingy do schránky (V štýle HT tabuliek použiteľných na konferencii)
-
+foxtrick.GoaldifferenceToTables.desc=Pridáva extra stĺpec Rozdiel gólov ako na stránku s postupmi, tak na stránku so staršími tabuľkami ligy
 foxtrick.CrossTable.desc=Pridáva extra tabuľku do zápasov, kde všetky výsledky ligových zápasov sú prezentované zahrňujúc graf ligových pozícií
 foxtrick.ElectionTable.desc=Pridáva percentá do tabuľky volieb (iba zobrazené hlasy sú započítané, nie všetky)
 foxtrick.ContextMenuCopy.desc=Pridáva možnost do kontextového menu na skopírovanie ID(ID tímu, ID užívateľa,...)
@@ -816,7 +816,7 @@ foxtrick.LeagueAndMatchChat.FederationChat=Nehattrickovský federačný chat
 
 #htms
 HTMSPrediction.prediction=Predpovedaný výsledok
-
+HTMSPrediction.windrawloss=výhra/remíza/prehra
 HTMSPrediction.title=Analýza zápasu od HTMS
 HTMSPrediction.changePrediction=Zmeniť predpoveď
 
