--- a/content/locale/sq/foxtrick.properties
+++ b/content/locale/sq/foxtrick.properties
@@ -171,7 +171,7 @@ foxtrick.CopyMatchID.desc=Kopjon ID të ndeshjes kur klikon mbi ikonën e ndeshj
 foxtrick.HeaderFix.desc=Rregullon Kreu ndërsa lëvizni në faqe (ndikon gjithashtu dhe në faqet e tjera të HT)
 foxtrick.HeaderFix.FixLeft.desc=Gjithashtu rregullon nënmenynë ndërsa lëvizni në faqe
 foxtrick.CopyRatings.desc=Shton një Buton tek 'Veprimet' në faqen e raportimit të ndeshjes, kështu ju mund të kopjoni vlërësimet tek clipboard (stili HT-tabelë style për forumet)
-
+foxtrick.GoaldifferenceToTables.desc=Shton një kollon ekstra për golavarazhin në tabelën e promovimit
 foxtrick.CrossTable.desc=Shton një tabelë ekstra tek Rezultatet, ku gjithë rezultatet e ndeshjeve të ligës paraqiten
 foxtrick.ElectionTable.desc=Shton përqindjet tek tabela e zgjedhjeve
 foxtrick.ContextMenuCopy.desc=Shton një opsion tek menyja e përballjes për kopjimin e id-ve (ekipid, përdoruesid...)
