--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -90,8 +90,8 @@ foxtrick.LinksEconomy.desc=Додаје неколико екстерних ли
 foxtrick.LinksYouthOverview.desc=Додаје неколико екстерних линкова на страницу омладинске академије.
 foxtrick.LinksYouthTraining.desc=Додаје неколико екстерних линкова на страницу за тренинг у омладинској академији.
 foxtrick.LinksYouthPlayerDetail.desc=Додаје неколико екстерних линкова на индивидуалну страницу играча омладинског тима.
-
-
+foxtrick.LinksYouthPlayerlist.desc=Додаје неколико екстерних линкова на страницу играча омладинског тима.
+foxtrick.LinksYouthMatchlist.desc=Додаје неколико екстерних линкова на страницу мечева омладинског тима.
 foxtrick.LinksYouthLeague.desc=Додаје неколико екстерних линкова на страницу омладинске лиге.
 foxtrick.LinksArena.desc=Додаје неколико екстерних линкова на страницу стадиона.
 foxtrick.LinksCoach.desc=Додаје неколико екстерних линкова на страницу за промену тренера.
