--- a/content/locale/he/foxtrick.properties
+++ b/content/locale/he/foxtrick.properties
@@ -176,7 +176,7 @@ foxtrick.CopyMatchID.desc=Copies the match id when clicking on the league/cup/fr
 foxtrick.HeaderFix.desc=Fixes the Header while scrolling (affects also on other pages of HT)
 foxtrick.HeaderFix.FixLeft.desc=Also fixes the submenu while scrolling
 foxtrick.CopyRatings.desc=Adds a Button to 'Actions' on match report page, so you can copy the ratings to clipboard (HT-table style for forums)
-
+foxtrick.GoaldifferenceToTables.desc=Adds an extra column for goal difference on promotion table as well as on old series tables
 foxtrick.CrossTable.desc=Adds an extra table to Fixtures, where all results on league matches are presented including line graph of league postitions
 foxtrick.ElectionTable.desc=Adds percentage to election table (only displayed votes are counted, not all)
 foxtrick.ContextMenuCopy.desc=Add an option to the context menu to copy ids (teamid, userid...)
