Serbian Translation update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7790 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -33,14 +33,14 @@ foxtrick.AttVsDef.newstyle.desc=нови стил
 foxtrick.AttVsDef.oldstyleifkseparated.desc=стари стил (са одвојеним индиректним ударцима)
 #Ratings
 foxtrick.Ratings.desc=Додаје оцене у меч извештају.
-foxtrick.Ratings.HatStats.desc=HatStats
-foxtrick.Ratings.HatStatsDetailed.desc=HatStats (детаљно)
-foxtrick.Ratings.HatStatsSeparated.desc=HatStats (по деловима терена)
-foxtrick.Ratings.LoddarStats.desc=LoddarStats
-foxtrick.Ratings.PeasoStats.desc=PeasoStats
-foxtrick.Ratings.VnukStats.desc=VnukStats
-foxtrick.Ratings.HTitaVal.desc=HTitaVal
-foxtrick.Ratings.GardierStats.desc=GardierStats
+foxtrick.Ratings.HatStats.desc=Хатстатс
+foxtrick.Ratings.HatStatsDetailed.desc=Хатстатс (детаљно)
+foxtrick.Ratings.HatStatsSeparated.desc=Хатстатс (по деловима терена)
+foxtrick.Ratings.LoddarStats.desc=Лоддар-статс
+foxtrick.Ratings.PeasoStats.desc=Пеасо-статс
+foxtrick.Ratings.VnukStats.desc=Внук-статс
+foxtrick.Ratings.HTitaVal.desc=ХТитаВал
+foxtrick.Ratings.GardierStats.desc=Гардиер-статс
 foxtrick.BookmarkAdjust.desc=Промените боју иконице маркера убацивањем одговарајућег кода за жељену боју у угластој загради у тексту коментара за маркер: '[cyan] текст' ће се појавити као 'cyan' иконица. Могући кодови за боје су: aqua, B, black, blue, brown, cyan, darkpurple, green, idea, lightblue, lightgreen, orange, pink, purple, red, white и yellow.
 #MedianTransferPrice
 foxtrick.MedianTransferPrice.desc=Приказује медијан цену са трансфер поређења.
@@ -774,12 +774,12 @@ foxtrick.tweaks.writeinguestbook=Упиши се у књигу гостију
 foxtrick.tweaks.copyplayerad=Ископирај податке о играчу у меморију
 foxtrick.tweaks.copied=Подаци о играчу су ископирани y меморију.
 
-ratings.HatStats=HatStats
-ratings.LoddarStats=LoddarStats
-ratings.PeasoStats=PeasoStats
-ratings.VnukStats=VnukStats
-ratings.HTitaVal=HTitaVal
-ratings.GardierStats=GardierStats
+ratings.HatStats=Хатстатс
+ratings.LoddarStats=Лоддар-статс
+ratings.PeasoStats=Пеасо-статс
+ratings.VnukStats=Внук-статс
+ratings.HTitaVal=ХТитаВал
+ratings.GardierStats=Гардиер-статс
 
 CopyRatings.both=Ископирај оцене са меча у меморију (ХТ-ББКод стил)
 CopyRatings.home=Ископирај меч оцене домаћег тима у меморију (ХТ-ББКод стил)
