German Translation Update (mostly formatting)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7792 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -76,12 +76,14 @@ foxtrick.ForumYouthIcons.debug.desc=Icon für FoxTrick debug log hinzufügen
 foxtrick.ForumYouthIcons.settings.desc=Icon für Foxtrickeinstellungen hinzufügen
 #FormatPostingText
 foxtrick.FormatPostingText.desc=Ersetzt FoxTrick HT-ML-Tags zu HTML-Tags (z.B. 'pre'-Element)
-foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 
+foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 foxtrick.CopyPosting.desc=Hinzufügen eines Icons für das Kopieren eines Postings incl. der Referenzen
 foxtrick.ShowForumPrefButton.desc=Anzeige des Link-Icons für die Foreneinstellungen auf jeder Foren-Seite
+
 foxtrick.LinksLeague.desc=Links hinzufügen auf der Liga-Seite
 foxtrick.LinksTeam.desc=Links hinzufügen auf der Verein-Seite
+
 foxtrick.LinksCountry.desc=Links hinzufügen auf der Länder-Seite
 foxtrick.LinksChallenges.desc=Links hinzufügen auf der Forderungen-Seite
 foxtrick.LinksEconomy.desc=Links hinzufügen auf der Finanzen-Seite
@@ -200,8 +202,6 @@ foxtrick.ForumPresentation.Forum_Link_Grey_Icons.desc=Anzeige von Icons anstelle
 foxtrick.ForumPresentation.moved_avatarinfo_fix.desc=Behebt falsch positionierte Avatar-Info wenn der Posting-Kopf zu voll wird
 foxtrick.HeaderFix.RemoveFlicker.desc=Entfernt das flackern des Kopfbereichs im Firefox 3.5 bei eingeschalteten Headerfix
 foxtrick.SkinPlugin.desc=Hinzufügen eigener Hattrick Skins
-
-
 foxtrick.CurrencyConverter.desc=Umrechnung der HT-Währung
 foxtrick.MovePlayerStatement.desc=Verschiebt die Spielerkommentare zum Spielerporträt. Sind die Spielerporträts nicht aktiviert, werden die Kommentare nicht angezeigt.
 foxtrick.TickerColoring.desc=Einfärben verschiedener Events im Kopf-Ticker
@@ -224,7 +224,7 @@ foxtrick.CopyMatchID.desc=Kopiert die MatchID in die Zwischenablage beim Klick a
 foxtrick.HeaderFix.desc=Fixiert beim Scrollen den Kopfbereich und das linke Menü (betrifft auch andere HT-Seiten)
 foxtrick.HeaderFix.FixLeft.desc=Beim Scrollen ebenfalls das linke Menü fixieren
 foxtrick.CopyRatings.desc=Fügt unter 'Aktionen' einen Button zum Kopieren der Ratings eines Matches hinzu (HT-table style für das Forum)
-foxtrick.GoaldifferenceToTables.desc=Anzeige einer extra Spalte für die Tordifferenz in Tabellen
+foxtrick.GoalDifferenceToTables.desc=Anzeige einer extra Spalte für die Tordifferenz in Tabellen
 foxtrick.CrossTable.desc=Anzeige einer Tabelle des Quervergleichs aller Teams
 foxtrick.ElectionTable.desc=Anzeige von Prozentzahlen in der Tabelle der Wahlergebnisse
 foxtrick.ContextMenuCopy.desc=Hinzufügen der Option zum Kopieren von TeamID, UserID...
@@ -238,6 +238,7 @@ foxtrick.NewMail.NotifyForum.desc=Popup bei Forenantworten
 foxtrick.CopyYouth.desc=Kopierfunktionen für Jugendreports und Seitenquellen
 foxtrick.CopyYouth.TrainingReport.desc=Trainingsreport
 foxtrick.CopyYouth.ScoutComment.desc=Scoutkommentar
+
 foxtrick.CopyYouth.PlayerSource.desc=Spielerseitenquelle
 foxtrick.CopyYouth.FixturesSource.desc=Spielplanseitenquelle
 foxtrick.PlayerBirthday.desc=Anzeige kommender und aktueller Geburtstage von Spielern in der Übersicht
@@ -290,7 +291,6 @@ foxtrick.SkillTable.ColouredYouth.desc=Farbige Jugendskills nach Potenzial etc
 foxtrick.HighlightCupwins.desc=Hervorheben des Siegers bei Pokalspielen
 foxtrick.HighlightCupwins.HighlightCupsets.desc=Sieger in der Pokalübersicht hervorheben, falls es mit einem niedrigerem Pokalranking (Heimteam) antrat
 foxtrick.SkillTranslation.desc=Hinzufügen der englischen Übersetzung von Skills auf der Hilfe-Seite sowie Glosar
-
 #CountryList
 foxtrick.CountryList.desc=Ersetzen der englischen Ländernamen in Selectboxen durch die Originalnamen.
 foxtrick.CountryList.SelectBoxes.desc=Ersetzen der englischen Ländernamen durch ihren eigenen in Select Boxen
@@ -330,6 +330,7 @@ foxtrick.HTMSPoints.desc=Anzeige der Trainingspunkte für einen Spieler laut HTM
 foxtrick.HTMSPoints.AddToPlayer.desc=Anzeige auf der Spieler-Seite
 foxtrick.HTMSPoints.AddToSearchResult.desc=Anzeige auf der Trefferseite der Transfersuche
 foxtrick.HTMSPoints.AddToPlayerList.desc=Anzeiger auf der Seite der Spielerliste
+
 foxtrick.FriendlyInterface.desc=Bereitstellen eines freundlicheren Nutzerinterfaces
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Anzeige der Spielernamen ohne Ellipse auf der Aufstellungsseite
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Anzeige der Nationalmannschaften als Links bei Nationalspielern
@@ -346,6 +347,18 @@ foxtrick.ShowLineupSet.LineupSet.desc=Hervorheben von gesetzten Aufstellungen
 foxtrick.ShowLineupSet.Ownerless.desc=Hervorheben von Vereinen ohne Besitzer
 foxtrick.ShowLineupSet.Winning.desc=Hervorheben von Gewinners
 foxtrick.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Teams in den Supporterstatistiken
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 # -----------------------------------------------------------------------------
@@ -380,7 +393,7 @@ YouthPromotes.today=Spieler kann heute befördert werden.
 # links
 foxtrick.links.boxheader=Links
 
-#teamstats
+#teamstats+filters
 foxtrick.TeamStats.label=Teamübersicht
 foxtrick.TeamStats.PlayerNotToOld.label=Spieler < 19 Jahre
 foxtrick.TeamStats.PlayerToOld.label=Spieler >= 19 Jahre
@@ -390,8 +403,9 @@ foxtrick.TeamStats.TransferListed.label=Transfergelistet
 foxtrick.TeamStats.Pictures.label=Gesichter
 foxtrick.TeamStats.PlayedLatest.label=Einsatz im letzten Spiel
 foxtrick.TeamStats.NotPlayedLatest.label=Ohne Einsatz im letzten Spiel
+
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigengewächse
-foxtrick.TeamStats.PurchasedPlayers.label=Gekauft
+foxtrick.TeamStats.PurchasedPlayers.label=Gekaufte
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -473,11 +487,28 @@ ForumSpecialBBCode.table=Fügt 'table'-Tags ein bzw. konvertiert den ausgewählt
 ForumSpecialBBCode.tableSeparator=Konvertiert "%s" in Zellen
 ForumSpecialBBCode.enterSeparator=Eigenen Seperator eingeben
 
+
+
+
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Filtername:
 foxtrick.transferfilter.delete_filter_ask=Diesen Filter wirklich löschen?
 foxtrick.transferfilter.save_new_filter=Filter speichern
 foxtrick.transferfilter.Foxtrick_Filters=FoxTrick Filter
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 #Locales for date and time
 #Very short strings are needed. Have a look on searchresults on the transfer list. The table cell may not break!
@@ -505,6 +536,13 @@ match.type.nt.competitive=World Cup
 match.type.youth.league=Jugendliga
 match.type.youth.friendly=Jugendfreundschaftspiel
 match.type.youth.friendly.cup=Jugendfreundschaftspiel (Pokalregeln)
+
+
+
+
+
+
+
 
 #Skills
 Playmaking=Spielaufbau
@@ -543,6 +581,40 @@ categories.R=R
 categories.E1=E1
 categories.E2=E2
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 General=Allgemein
 
 PlayerNumber=Spielernummer
@@ -569,6 +641,11 @@ Stamina.abbr=Kon
 Form=Form
 Form.abbr=Fo
 
+
+
+
+
+
 Status=Status
 Status.abbr=Status
 
@@ -584,8 +661,13 @@ Last_match=Letztes Spiel
 Last_match.abbr=Letztes
 Last_stars=Letzte Bewertung
 Last_stars.abbr=Str
+
+
+
+
 Last_position=Letzte Position
 Last_position.abbr=Pos
+
 
 Bruised=Angeschlagen
 Bruised.abbr=Ang
@@ -714,6 +796,10 @@ CopyYouth.fixturesSource=Kopiere HTML Quellcode
 CopyYouth.fixturesSource.copied=HTML Quellcode wurde in die Zwischenablage kopiert.
 CopyYouth.goto=Gehe zu %s
 
+
+
+
+
 CopySelected.desc=Auswahl mit Strg+C kopieren.
 SpecialPaste.desc=Einfügen mit Umschalt + Linksklick.
 
@@ -832,7 +918,6 @@ foxtrick.RapidId.ViewById=Anzeige nach ID
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Wechselt die Ansicht der Tabelle
 foxtrick.SkillTable.Add_homegrown_title=Alle eigengewächse des aktuellen Teams zufügen
-
 foxtrick.SkillTable.showTimeInClub_title=Zeit des Vereinsbeitritts anzeigen
 foxtrick.SkillTable.detach=Detach
 
@@ -843,11 +928,23 @@ foxtrick.LeagueAndMatchChat.CupChat=Non HT Pokalchat
 foxtrick.LeagueAndMatchChat.FederationChat=Non HT Föderationchat
 
 
-#htms
+# HTMSPrediction
 HTMSPrediction.prediction=Ergebnisvorhersage
 HTMSPrediction.windrawloss=Sieg/Unentschieden/Niederlage
 HTMSPrediction.title=Spielanalyse durch HTMS
 HTMSPrediction.changePrediction=Vorhersage ändern
+
+
+
+
+
+
+
+
+
+
+
+
 
 # HTMSPoints
 HTMSPoints=HTMS Punkte:
@@ -897,13 +994,15 @@ LocalTime.hattrick.title=Anzeige in Hattrickzeit. Klicken um zur Lokalzeit zu we
 LocalTime.local=Lokalzeit
 LocalTime.local.title=Anzeige in Lokalzeit. Klicken um zur Hattrickzeit zu wechseln.
 
+# Links
+
+
 #actions
 Copy=Kopieren
 View=Anzeigen
 Switch_view=Ansicht wechseln
 Detach=Detach
 AddHomegrown=Eigengewächse zufügen
-
 showTimeInClub=Zeit im Verein anzeigen
 Filter=Filter
 sort.up=Hoch
@@ -926,7 +1025,7 @@ button.save=Speichern
 button.go=Los!
 button.add=Hinzufügen
 button.remove=Entfernen
-
+button.top=Nach oben
 button.authorize=Autorisieren
 button.export=Exportiere
 button.import=Importiere
@@ -948,6 +1047,7 @@ oauth.link=Erhalte den Bestätigungscode von chpp.hattrick.org
 oauth.success=FoxTrick wurde erfolgreich autorisiert! Bitte lade die Seite neu um die von FoxTrick bereitgestellten Daten angezeigt zu bekommen.
 
 api.failure=Datenzugriff auf Hattrick fehlgeschalgen. Du musst FoxTrick autorisieren um Zugriff auf deine Teamdaten zu erhalten. Wenn du dies bereits getan hast, überprüfe deine Netzwerkverbindung und versuche es später erneut.
+
 
 exception.error=Fehler %s
 
@@ -987,6 +1087,7 @@ tab.changes=Änderungen
 tab.help=Hilfe
 
 
+
 foxtrick.prefs.setup.locale=Spracheinstellungen
 foxtrick.prefs.setup.dateFormat=Datumsformat
 foxtrick.prefs.setup.country=Ländereinstellung
@@ -1023,6 +1124,8 @@ link.nightlyChrome=Development builds für Google Chrome
 link.nightlyOpera=Development builds für Opera
 link.nightlySafari=Development builds für Safari
 link.recentChanges=Letzte Änderungen
+
+
 
 foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
 foxtrick.versionReleaseNotes=Anzeige der Release Notes für:
