German translation Update (matchOrder.swapPositions)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7793 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -541,7 +541,7 @@ match.type.youth.friendly.cup=Jugendfreundschaftspiel (Pokalregeln)
 
 
 
-
+matchOrder.swapPositions=Seiten vertauschen
 
 
 #Skills
